# Meridix-Launcher

./: Fabulously.Optimized-v13.2.1.mrpack  README.md  check_atl.js  check_favicons.js  check_new.js  check_urls.js  find_mc_icon.js  generate_dark.py  generate_dark.swift  generate_icons.py  manifest.json  pubspec.yaml  pubspec.yaml.bak  test_api.dart  test_client_ids.dart  test_dart_forge.dart  test_dir.dart  test_forge.dart  test_forge.rs  test_oauth.dart  test_polymc_redirect.dart  test_prefs.dart  test_url.dart  test_v1_endpoint.dart
docs/: index.html
rust/: Cargo.toml  test_auth.rs  test_auth_api.rs  test_discord.rs  test_msa.rs  test_rpc.rs
rust/mc-launcher-core/: .gitignore  Cargo.toml  README.md  fix_compat.py  test_json  test_xz2.rs  test_zulu.rs  test_zulu_install  test_zulu_install.rs
rust/mc-launcher-core/.github/workflows/: publish-crate.yml
rust/mc-launcher-core/examples/: launch_matrix.rs  simple_launch.rs  simple_offline_launch.rs
rust/mc-launcher-core/src/: account.rs  error.rs  launcher.rs  lib.rs  platform.rs  prelude.rs  progress.rs
rust/mc-launcher-core/src/auth/: microsoft_account.rs  mod.rs  offline.rs
rust/mc-launcher-core/src/command/: builder.rs  mod.rs
rust/mc-launcher-core/src/compatibility/: mod.rs
rust/mc-launcher-core/src/core/: arguments.rs  classpath.rs  maven.rs  mod.rs  rules.rs  version.rs
rust/mc-launcher-core/src/forge/: mod.rs
rust/mc-launcher-core/src/install/: assets.rs  client.rs  libraries.rs  loader.rs  mod.rs  natives.rs  request.rs  vanilla.rs
rust/mc-launcher-core/src/io/: archive.rs  hash.rs  mod.rs  paths.rs
rust/mc-launcher-core/src/loader/: common.rs  fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs
rust/mc-launcher-core/src/net/: download.rs  http.rs  mod.rs
rust/mc-launcher-core/tests/: command_builder.rs  compat_legacy_macos.rs  compat_wrappers.rs  core_maven_io.rs  core_rules_version.rs  download_archive.rs  error_baseline.rs  forge_test.rs  install_complete.rs  install_plan.rs  live_launch_matrix.rs  live_metadata.rs  loader_fabric_quilt.rs  loader_forge_neoforge.rs  loader_install_integration.rs  zulu_test.rs
rust/src/: frb_generated.rs
rust/src/api/: auth.rs  discord.rs  installer.rs  launcher.rs  metadata.rs  mod.rs  simple.rs
(+150 files in other folders)
