[package]
name = "rust_lib_ausrine_launcher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
discord-rich-presence = "1.1.0"
flutter_rust_bridge = "=2.12.0"
lazy_static = "1.5.0"
libc = "0.2.186"
lzma-sys = { version = "0.1.20", features = ["static"] }
mc-launcher-core = { path = "mc-launcher-core" }
minecraft-msa-auth = "0.4.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
