[package]
name = "mc-launcher-core"
version = "0.1.1"
license = "MIT"
description = "Rust building blocks for installing and launching Minecraft profiles."
readme = "README.md"
homepage = "https://github.com/Star-tears/mc-launcher-core"
repository = "https://github.com/Star-tears/mc-launcher-core"
keywords = ["minecraft", "mc", "launcher", "core"]
categories = ["development-tools"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
lzma-rs = "0.3.0"
once_cell = "1.21.4"
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["blocking", "json", "rustls", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
sha1 = "0.11.0"
sha2 = "0.11.0"
sysinfo = "0.39.2"
tempfile = "3.27.0"
thiserror = "2.0.18"
url = "2.5.8"
which = "8.0.2"
xz2 = "0.1.7"
zip = "2.4.2"

[target.'cfg(windows)'.dependencies]
winver = "1.0.0"

[dependencies.uuid]
version = "1.23.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[package.metadata.exclude]
# Add paths to exclude from the package here
paths = [
    "tests/**", # Exclude everything under the "test" directory
]
